package entities;

/**
 * Represents a movie.
 */

public class Movie implements Media {

}