package entities;

/**
 * Represents a TV show.
 */

public class TVShow implements Media {

}